--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: #389092;
+  color: #ff5100;
   text-decoration: none;
 }
 a:hover {
@@ -227,27 +227,27 @@ table td {
  */
 ::selection {
   color: inherit;
-  background-color: rgba(199, 111, 109, 0.3);
+  background-color: rgba(0, 174, 255, 0.3);
 }
 
 ::-moz-selection { /* Code for Firefox */
   color: inherit;
-  background-color: rgba(199, 111, 109, 0.3);
+  background-color: rgba(0, 174, 255, 0.3);
 }
 
 ::-ms-selection {
   color: inherit;
-  background-color: rgba(199, 111, 109, 0.3);
+  background-color: rgba(0, 174, 255, 0.3);
 }
 
 ::-o-selection {
   color: inherit;
-  background-color: rgba(199, 111, 109, 0.3);
+  background-color: rgba(0, 174, 255, 0.3);
 }
 
 ::-webkit-selection {
   color: inherit;
-  background-color: rgba(199, 111, 109, 0.3);
+  background-color: rgba(0, 174, 255, 0.3);
 }
 
 /**
@@ -268,7 +268,7 @@ html[data-scroll-status=top] header.site-header-transparent.site-header .site-br
 }
 @media screen and (max-width: 800px) {
   html[data-scroll-status=top] header.site-header-transparent.site-header .page-link {
-    color: #cacaca;
+    color: black;
   }
   html[data-scroll-status=top] header.site-header-transparent.site-header .menu-icon > svg {
     fill: #fdfdfd;
@@ -292,7 +292,7 @@ html[data-scroll-status=down] .framework .sidebar {
  * Site header
  */
 .site-header {
-  background-color: #353535;
+  background-color: #ffffff;
   height: 63.84px;
   width: 100%;
   transition: height 0.2s, text-shadow 0.2s, top 0.2s;
@@ -337,7 +337,7 @@ html[data-scroll-status=down] .framework .sidebar {
   transition: 0.1s filter color;
 }
 .site-brand .site-brand-inner, .site-brand .site-brand-inner:visited {
-  color: #cacaca;
+  color: black;
 }
 .site-brand .site-brand-inner .site-favicon {
   display: inline-block;
@@ -360,7 +360,7 @@ html[data-scroll-status=down] .framework .sidebar {
 }
 .site-nav .page-link {
   line-height: 1.6;
-  color: #cacaca;
+  color: black;
   transition: 0.1s ease-in-out;
 }
 .site-nav .page-link:not(:last-child) {
@@ -386,7 +386,7 @@ html[data-scroll-status=down] .framework .sidebar {
     text-align: center;
   }
   .site-nav .menu-icon > svg {
-    fill: rgba(202, 202, 202, 0.8);
+    fill: rgba(0, 0, 0, 0.8);
     transition: 0.1s fill;
   }
   .site-nav input ~ .trigger {
@@ -397,12 +397,12 @@ html[data-scroll-status=down] .framework .sidebar {
   }
   .site-nav input:checked ~ .trigger {
     display: block;
-    background: #353535;
+    background: #ffffff;
   }
   .site-nav .page-link {
     display: block;
     padding: 5px 10px;
-    color: rgba(202, 202, 202, 0.8);
+    color: rgba(0, 0, 0, 0.8);
     margin: 0 25px;
   }
 }
@@ -412,8 +412,8 @@ html[data-scroll-status=down] .framework .sidebar {
  */
 .site-footer {
   font-size: 14px;
-  color: white;
-  background-color: #282828;
+  color: #404040;
+  background-color: #f2f2f2;
   text-align: left;
   transition: background-color 0.2s;
 }
@@ -422,10 +422,10 @@ html[data-scroll-status=down] .framework .sidebar {
   padding: 54px 0;
 }
 .site-footer a {
-  color: #389092;
+  color: #ff5100;
 }
 .site-footer a:hover {
-  color: #46b4b7;
+  color: #ff7433;
 }
 
 .copyleft {
@@ -941,7 +941,7 @@ html[data-scroll-status=down] .framework .sidebar {
 .post-badge {
   display: none;
   padding: 0px 3px;
-  background-color: #389092;
+  background-color: #ff5100;
   color: #fff;
   font-size: 10px;
   font-weight: 600;
@@ -1261,7 +1261,7 @@ html[data-theme=dark] a:visited .post-badges .post-badge.badge-new {
   transition: background 0.2s;
 }
 .common-list li a:hover {
-  background-color: #c6c6c6;
+  background-color: #eeeeee;
 }
 .common-list li span {
   font-size: 11.2px;
@@ -1367,7 +1367,7 @@ body {
 
 /* OVERRIDE GOOGLE TRANSLATE WIDGET CSS END */
 .ct-language-selected, .ct-language-dropdown li:hover {
-  background-color: #282828 !important;
+  background-color: #f2f2f2 !important;
 }
 
 .ct-language-dropdown {
@@ -1376,7 +1376,7 @@ body {
   position: absolute;
   top: 110%;
   right: -10px;
-  background-color: #424242;
+  background-color: white;
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
   width: 100px;
@@ -1400,7 +1400,7 @@ body {
 }
 .ct-language-dropdown li a {
   display: block;
-  color: #cacaca;
+  color: black;
 }
 .ct-language-dropdown li a img {
   width: 24px;
